--- a/app/src/main/res/layout/logininterface.xml
+++ b/app/src/main/res/layout/logininterface.xml
@@ -89,6 +89,7 @@
         android:text="Sign up"
         android:textColor="#9A5A5B"
         android:textStyle="bold"
+        android:id="@+id/signup"
         />
 
 </RelativeLayout>
