--- a/app/src/main/res/layout/camerascreen.xml
+++ b/app/src/main/res/layout/camerascreen.xml
@@ -8,13 +8,13 @@
     android:background="@color/black"
     tools:context=".MainActivity12">
 
-    <TextView
+<!--    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/group_1"
         android:layout_alignParentTop="true"
         android:id="@+id/top"
-        />
+        />-->
 
     <ImageView
         android:layout_width="match_parent"
@@ -58,6 +58,7 @@
         android:id="@+id/type3"
         />
 
+<!--
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -67,5 +68,6 @@
         android:layout_marginBottom="40dp"
         android:id="@+id/home_indicator"
         />
+-->
 
 </RelativeLayout>
