--- a/app/src/main/res/layout/chatscreen.xml
+++ b/app/src/main/res/layout/chatscreen.xml
@@ -50,6 +50,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/camera"
+            android:id="@+id/call"
             />
 
         <de.hdodenhof.circleimageview.CircleImageView
