--- a/app/src/main/res/layout/explorescreen.xml
+++ b/app/src/main/res/layout/explorescreen.xml
@@ -34,7 +34,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_marginEnd="15dp"
-            android:background="@color/white">
+            android:background="@color/white"
+            android:id="@+id/searchbar">
 
             <ImageView
                 android:layout_width="28dp"
