--- a/app/src/main/res/layout/storyscreen.xml
+++ b/app/src/main/res/layout/storyscreen.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".MainActivity9">
 
     <ImageView
@@ -12,6 +13,8 @@
         android:layout_height="match_parent"
         android:background="@drawable/img_11"
         android:id="@+id/image"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="40dp"
 
         />
 
@@ -20,13 +23,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@drawable/user_story_message"
+        android:layout_marginBottom="30dp"
 
         />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="55dp"
         android:layout_marginStart="10dp"
         android:src="@drawable/img_4"
         android:id="@+id/circle"
@@ -37,7 +41,7 @@
         android:layout_height="wrap_content"
         android:text="craig_love"
         android:layout_toEndOf="@+id/circle"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="55dp"
         android:layout_marginStart="10dp"
         android:textColor="@color/white"
         android:textStyle="bold"
@@ -51,7 +55,7 @@
         android:text="4h"
         android:textColor="#CFCFCF"
         android:layout_toRightOf="@+id/person"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="55dp"
         android:layout_marginStart="10dp"
         android:textSize="18dp"
         />
