--- a/app/src/main/res/layout/myprofilescreen.xml
+++ b/app/src/main/res/layout/myprofilescreen.xml
@@ -53,6 +53,7 @@
             android:scaleY="-1" />
 
         <ImageView
+            android:id="@+id/menu"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginTop="40dp"
