--- a/app/src/main/res/drawable/home.xml
+++ b/app/src/main/res/drawable/home.xml
@@ -1,21 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="375dp"
-    android:height="80dp"
-    android:viewportWidth="375"
-    android:viewportHeight="80">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M0,1h375v79h-375z"
-      android:fillColor="#FAFAFA"/>
-  <path
-      android:pathData="M300,1h75v50h-75z"
-      android:fillColor="#FAFAFA"
-      android:fillAlpha="0.01"/>
-  <path
-      android:pathData="M337.5,35C343.85,35 349,29.85 349,23.5C349,17.15 343.85,12 337.5,12C331.15,12 326,17.15 326,23.5C326,29.85 331.15,35 337.5,35Z"
-      android:fillType="evenOdd"
-      />
-
-  <path
-      android:pathData="M36.3,11.9C36.69,11.52 37.31,11.52 37.7,11.9L47.7,21.71C47.89,21.89 48,22.15 48,22.42V34.5C48,34.75 47.82,34.95 47.59,34.99L47.5,35L39.5,35C39.22,35 39,34.78 39,34.5V29L39,28.65C38.96,27.22 38.63,26.09 37.18,26.01L37,26C35.4,26 35.1,27.25 35,28.82L35,29V34.5C35,34.78 34.78,35 34.5,35L26.5,35C26.25,35 26.05,34.82 26.01,34.59L26,34.5V22.42C26,22.15 26.11,21.89 26.3,21.71L36.3,11.9ZM27.5,22.63V33.5H33.5L33.5,28.96L33.51,28.74C33.66,26.07 34.55,24.5 37.04,24.5L37.26,24.51C39.54,24.64 40.43,26.2 40.5,28.63L40.5,29V33.5H46.5V22.63L37,13.32L27.5,22.63Z"
-      android:fillColor="#9B5A5A"/>
+      android:pathData="M12.69,2.276C12.304,1.908 11.696,1.908 11.31,2.276L2.31,10.858C2.112,11.047 2,11.309 2,11.582V21C2,21.552 2.448,22 3,22H10V17C10,15.895 10.895,15 12,15C13.105,15 14,15.895 14,17V22H21C21.552,22 22,21.552 22,21V11.582C22,11.309 21.888,11.047 21.69,10.858L12.69,2.276ZM16,20H20V12.01L12,4.382L4,12.01V20H8V17C8,14.791 9.791,13 12,13C14.209,13 16,14.791 16,17V20Z"
+      android:fillColor="#935855"
+      android:fillType="evenOdd"/>
 </vector>
