--- a/app/src/main/res/layout/callscreen.xml
+++ b/app/src/main/res/layout/callscreen.xml
@@ -59,19 +59,19 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:src="@drawable/sound_on"
-        android:layout_marginBottom="30dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="70dp"
+        android:layout_marginEnd="40dp"
 
         />
 
     <Button
-        android:layout_width="120dp"
-        android:layout_height="100dp"
+        android:layout_width="100dp"
+        android:layout_height="80dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:backgroundTint="#FF0000"
-        android:layout_marginBottom="20dp"
-        android:drawableLeft="@drawable/vector"
+        android:layout_marginBottom="50dp"
+        android:drawableLeft="@drawable/end_call_linear"
         />
 
 
@@ -80,9 +80,9 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:src="@drawable/menu"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="20dp"
+        android:src="@drawable/note"
+        android:layout_marginBottom="70dp"
+        android:layout_marginLeft="40dp"
 
         />
 
