--- a/app/src/main/res/layout/explorescreen.xml
+++ b/app/src/main/res/layout/explorescreen.xml
@@ -9,13 +9,65 @@
     tools:context=".MainActivity15"
     >
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/tab_bar"
-        android:layout_alignParentBottom="true"
+    <RelativeLayout
         android:id="@+id/tabbar"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        android:elevation="6dp">
+
+        <ImageView
+            android:id="@+id/home"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/home" />
+
+        <ImageView
+            android:id="@+id/search2"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@id/home"
+            android:layout_marginStart="30dp"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/search__filled_" />
+
+        <ImageView
+            android:id="@+id/post"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/create" />
+
+        <ImageView
+            android:id="@+id/notifs"
+            android:layout_width="43dp"
+            android:layout_height="43dp"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@id/post"
+            android:layout_marginStart="40dp"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/like" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@id/notifs"
+            android:layout_marginStart="30dp"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/img_3"
+            app:civ_border_color="#935855"
+            app:civ_border_width="3dp"/>
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/inputBar"
@@ -59,6 +111,7 @@
                 android:padding="8dp"
                 android:paddingStart="15dp"
                 android:textColorHint="#9B5A5A"
+                android:textColor="@color/black"
                 android:textSize="20dp" />
 
         </RelativeLayout>
