--- a/app/src/main/res/layout/mystoryscreen.xml
+++ b/app/src/main/res/layout/mystoryscreen.xml
@@ -26,7 +26,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="90dp"
         android:layout_marginStart="10dp"
         android:src="@drawable/img_5"
         android:id="@+id/circle"
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:text="gurskey.studio"
         android:layout_toEndOf="@+id/circle"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="95dp"
         android:layout_marginStart="10dp"
         android:textColor="@color/white"
         android:textStyle="bold"
@@ -51,7 +51,7 @@
         android:text="11h"
         android:textColor="#ffffff"
         android:layout_toRightOf="@+id/person"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="95dp"
         android:layout_marginStart="30dp"
         android:textSize="18dp"
         />
@@ -61,8 +61,19 @@
         android:layout_height="25dp"
         android:background="@drawable/verfied_badge"
         android:layout_toEndOf="@id/person"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="95dp"
         android:textColor="#935855"
         />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="@drawable/line"
+        android:backgroundTint="@color/white"
+        android:layout_marginTop="64dp"
+        android:id="@+id/line5"
+        />
+
+
 
 </RelativeLayout>
