--- a/app/src/main/res/layout/signupscreen.xml
+++ b/app/src/main/res/layout/signupscreen.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:text="Socially"
+            android:fontFamily="@font/poppins_semibold"
             android:textColor="@color/white"
             android:textSize="40sp"
             android:textStyle="bold" />
@@ -43,8 +44,10 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="4dp"
             android:text="Create An Account and Sign Up"
+            android:fontFamily="@font/poppins_medium"
             android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textStyle="normal"
+            android:textSize="18sp" />
 
         <RelativeLayout
             android:id="@+id/profilepic"
@@ -82,8 +85,9 @@
                     android:layout_height="wrap_content"
                     android:text="Username"
                     android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
+                    android:textSize="17dp"
+                    android:fontFamily="@font/poppins_medium"
+                    android:textStyle="normal" />
 
                 <EditText
                     android:layout_width="match_parent"
@@ -91,6 +95,7 @@
                     android:layout_marginBottom="16dp"
                     android:backgroundTint="@color/white"
                     android:hint="tejpatil064"
+                    android:fontFamily="@font/poppins_medium"
                     android:inputType="text"
                     android:src="@drawable/line"
                     android:textColor="@color/white"
@@ -101,8 +106,9 @@
                     android:layout_height="wrap_content"
                     android:text="Your Name"
                     android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
+                    android:fontFamily="@font/poppins_medium"
+                    android:textSize="17dp"
+                    android:textStyle="normal" />
 
                 <EditText
                     android:layout_width="match_parent"
@@ -110,6 +116,7 @@
                     android:layout_marginBottom="16dp"
                     android:backgroundTint="@color/white"
                     android:hint="Tejas"
+                    android:fontFamily="@font/poppins_medium"
                     android:inputType="text"
                     android:src="@drawable/line"
                     android:textColor="@color/white"
@@ -120,8 +127,9 @@
                     android:layout_height="wrap_content"
                     android:text="Your Last Name"
                     android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
+                    android:textSize="17dp"
+                    android:fontFamily="@font/poppins_medium"
+                   />
 
                 <EditText
                     android:layout_width="match_parent"
@@ -129,6 +137,7 @@
                     android:layout_marginBottom="16dp"
                     android:backgroundTint="@color/white"
                     android:hint="Patil"
+                    android:fontFamily="@font/poppins_medium"
                     android:inputType="text"
                     android:src="@drawable/line"
                     android:textColor="@color/white"
@@ -139,8 +148,9 @@
                     android:layout_height="wrap_content"
                     android:text="Date Of Birth"
                     android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
+                    android:textSize="17dp"
+                    android:fontFamily="@font/poppins_medium"
+                    android:textStyle="normal" />
 
                 <EditText
                     android:layout_width="match_parent"
@@ -148,6 +158,7 @@
                     android:layout_marginBottom="16dp"
                     android:backgroundTint="@color/white"
                     android:hint="02-09-2003"
+                    android:fontFamily="@font/poppins_medium"
                     android:inputType="text"
                     android:src="@drawable/line"
                     android:textColor="@color/white"
@@ -158,8 +169,9 @@
                     android:layout_height="wrap_content"
                     android:text="Email"
                     android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
+                    android:textSize="17dp"
+                    android:fontFamily="@font/poppins_medium"
+                    android:textStyle="normal" />
 
                 <EditText
                     android:layout_width="match_parent"
@@ -168,6 +180,7 @@
                     android:backgroundTint="@color/white"
                     android:hint="Enter E-mail"
                     android:inputType="text"
+                    android:fontFamily="@font/poppins_medium"
                     android:src="@drawable/line"
                     android:textColor="@color/white"
                     android:textColorHint="#80FFFFFF" />
@@ -177,8 +190,9 @@
                     android:layout_height="wrap_content"
                     android:text="Password"
                     android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
+                    android:textSize="17dp"
+                    android:fontFamily="@font/poppins_medium"
+                    />
 
                 <EditText
                     android:layout_width="match_parent"
@@ -190,6 +204,7 @@
                     android:inputType="text"
                     android:src="@drawable/line"
                     android:text=".........."
+                    android:fontFamily="@font/poppins_medium"
                     android:textColor="@color/white"
                     android:textColorHint="#80FFFFFF"
                     android:textSize="25dp"
@@ -199,15 +214,13 @@
                     android:id="@+id/createAccountBtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:alpha="1"
-                    android:enabled="true"
-                    android:padding="14dp"
+                    android:layout_marginTop="10dp"
+                    android:padding="24dp"
                     android:backgroundTint="#AE7675"
                     android:text="Create an Account"
+                    android:fontFamily="@font/poppins_medium"
                     android:textColor="@color/white"
-                    android:textSize="17dp"
-
+                    android:textSize="15dp"
                     />
 
 
