--- a/app/src/main/res/layout/storyscreen.xml
+++ b/app/src/main/res/layout/storyscreen.xml
@@ -30,7 +30,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="75dp"
         android:layout_marginStart="10dp"
         android:src="@drawable/img_4"
         android:id="@+id/circle"
@@ -41,12 +41,64 @@
         android:layout_height="wrap_content"
         android:text="craig_love"
         android:layout_toEndOf="@+id/circle"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="75dp"
         android:layout_marginStart="10dp"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="18sp"
         android:id="@+id/person"
+        />
+
+    <View
+        android:layout_width="70dp"
+        android:layout_height="3dp"
+        android:background="@drawable/line"
+        android:backgroundTint="#ECECEC"
+        android:layout_marginTop="60dp"
+        android:id="@+id/line"
+        android:layout_marginStart="8dp"
+        />
+    <View
+        android:layout_width="70dp"
+        android:layout_height="3dp"
+        android:background="@drawable/line"
+        android:backgroundTint="#B9B9B9"
+        android:layout_marginTop="60dp"
+        android:layout_toRightOf="@id/line"
+        android:id="@+id/line2"
+        android:layout_marginStart="8dp"
+        />
+
+    <View
+        android:layout_width="70dp"
+        android:layout_height="3dp"
+        android:background="@drawable/line"
+        android:backgroundTint="#B9B9B9"
+        android:layout_marginTop="60dp"
+        android:layout_toRightOf="@id/line2"
+        android:id="@+id/line3"
+        android:layout_marginStart="8dp"
+        />
+
+    <View
+        android:layout_width="70dp"
+        android:layout_height="3dp"
+        android:background="@drawable/line"
+        android:backgroundTint="#B9B9B9"
+        android:layout_marginTop="60dp"
+        android:layout_toRightOf="@id/line3"
+        android:id="@+id/line4"
+        android:layout_marginStart="8dp"
+        />
+    <View
+        android:layout_width="70dp"
+        android:layout_height="3dp"
+        android:background="@drawable/line"
+        android:backgroundTint="#B9B9B9"
+        android:layout_marginTop="60dp"
+        android:layout_toRightOf="@id/line4"
+        android:id="@+id/line5"
+        android:layout_marginStart="8dp"
         />
 
     <TextView
@@ -55,7 +107,7 @@
         android:text="4h"
         android:textColor="#CFCFCF"
         android:layout_toRightOf="@+id/person"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="75dp"
         android:layout_marginStart="10dp"
         android:textSize="18dp"
         />
