--- a/app/src/main/res/layout/followingnotifs.xml
+++ b/app/src/main/res/layout/followingnotifs.xml
@@ -11,13 +11,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_above="@id/bottombar"
+        >
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1.2"
+            android:layout_weight="1.5"
             android:background="#FAFAFA"
             android:orientation="vertical">
 
@@ -86,6 +89,7 @@
             android:layout_weight="8"
             android:background="@color/white"
             android:fillViewport="true"
+            android:paddingBottom="20dp"
             >
 
 
@@ -95,8 +99,8 @@
                 android:background="@color/white"
                 >
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="20dp"
                     android:src="@drawable/img_5"
@@ -110,7 +114,7 @@
                     android:layout_toRightOf="@+id/img1"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="10dp"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     android:textColor="@color/black"
                     android:text="Karenne"
                     android:textStyle="bold"
@@ -123,7 +127,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="5dp"
                     android:textColor="@color/black"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     android:text="liked 3 posts. 3h"
                     android:id="@+id/liked"
                     />
@@ -295,8 +299,8 @@
                     android:textColor="#9A9A9A" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="20dp"
                     android:layout_below="@id/follow_target"
@@ -310,7 +314,7 @@
                     android:layout_toRightOf="@+id/img2"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="10dp"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     android:textColor="@color/black"
                     android:layout_below="@id/follow_target"
                     android:text="craig_love"
@@ -324,7 +328,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="5dp"
                     android:textColor="@color/black"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     android:layout_below="@id/follow_target"
                     android:text="liked 8 posts. 3h"
                     android:id="@+id/liked2"
@@ -522,6 +526,7 @@
                     android:layout_height="36dp"
                     android:layout_toEndOf="@id/person2"
                     android:layout_marginStart="-12dp"
+                    android:layout_marginTop="8dp"
                     android:layout_alignTop="@id/person2"
                     android:src="@drawable/img_3" />
 
@@ -720,6 +725,73 @@
                     android:textColor="#9A9A9A" />
 
 
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_below="@id/cmt_label"
+                    android:src="@drawable/img_16"
+                    android:id="@+id/last"
+
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/last"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@id/cmt_label"
+                    android:layout_marginStart="10dp"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
+                    android:text="maxjacobson"
+                    android:textStyle="bold"
+                    android:id="@+id/lasttext"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/lasttext"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_below="@id/cmt_label"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:text="liked 3 posts. 3h"
+                    android:id="@+id/lastliked"
+                    />
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@+id/lastliked"
+                    android:layout_marginStart="90dp"
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/img_34"
+                    android:id="@+id/lastone"
+                    />
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@+id/lastliked"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/img_37"
+                    android:layout_toRightOf="@+id/one"
+                    android:id="@+id/lasttwo"
+                    />
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@+id/lastliked"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/img_35"
+                    android:layout_toRightOf="@+id/lasttwo"
+                    />
 
 
 
